--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "^6.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
