--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
     "styled-components": "^4.4.1",
+    "three": "^0.111.0",
     "typist": "^0.1.0"
   },
   "scripts": {
