--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -11,8 +12,10 @@
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
     "styled-components": "^4.4.1",
+    "sweetalert2": "^9.4.3",
     "three": "^0.111.0",
-    "typist": "^0.1.0"
+    "typist": "^0.1.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
