--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-hamburger-menu": "^1.1.1",
     "react-icons": "^3.8.0",
+    "react-planetary": "^1.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
