--- a/package.json
+++ b/package.json
@@ -9,19 +9,14 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "react": "^16.12.0",
-    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
-    "react-hamburger-menu": "^1.1.1",
     "react-icons": "^3.11.0",
-    "react-planetary": "^1.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
     "styled-components": "^4.4.1",
     "sweetalert2": "^10.9.0",
-    "three": "^0.111.0",
-    "typist": "^0.1.0",
-    "yup": "^0.27.0"
+    "typist": "^0.1.0"
   },
   "scripts": {
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
