--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
+    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-typist": "^2.0.5",
