--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.1",
-    "axios": "^0.19.0",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
@@ -13,7 +13,7 @@
     "react-icons": "^3.11.0",
     "react-markdown": "^7.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-typist": "^2.0.5",
     "styled-components": "^4.4.1",
     "sweetalert2": "^10.9.0",
