open source section

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "babel-polyfill": "^6.26.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+      "@react-three/cannon": "4.0.1",
+    "@react-three/fiber": "7.0.18",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "three": "0.134.0",
     "react-icons": "^3.11.0",
     "react-markdown": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
+    "react-three-fiber": "^6.0.13",
     "react-typist": "^2.0.5",
     "styled-components": "^4.4.1",
     "sweetalert2": "^10.9.0",
