--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
     "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-      "@react-three/cannon": "4.0.1",
-    "@react-three/fiber": "7.0.18",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "three": "0.134.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-markdown": "^7.1.0",
     "react-router-dom": "^5.1.2",
